--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 :root {
+  --header-height:100px;
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -19,10 +20,44 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
+.layout-container {
+    display: grid;
+    grid-template-areas: 
+      "header header"
+      "sidebar main";
+    grid-template-rows: var(--header-height) 1fr;
+    grid-template-columns: 15% 1fr;
+    min-height: 100vh;
+}
+
+.header{
+    grid-area: header;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+    height: var(--header-height);
+}
+.sidebar{
+    grid-area: sidebar;
+    position: sticky;  /* 혹은 position relative로  */
+    top: var(--header-height);
+    height: calc(100vh - var(--header-height));
+}
+.main{
+    grid-area: main;
+    padding: 20px;
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
