--- a/components/header/herader.module.css
+++ b/components/header/herader.module.css
@@ -1,5 +1,5 @@
 .header_container{
-    width: 100%;
-    height: 120px;
-    background-color: yellow;
+   width: 100%;
+   height: 100%;
+   border: 1px solid black;
 }
