--- a/components/navigation/navigation.module.css
+++ b/components/navigation/navigation.module.css
@@ -1,5 +1,5 @@
 .navigation_container{
-    width: 15%;
-    background-color: aquamarine;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
 }
