feat:내비게이션 구현, 헤더/온보딩/네비게이션 통합

--- a/app/(no-sidebar)/(auth)/login/find-pw/findPassword.module.css
+++ b/app/(no-sidebar)/(auth)/login/find-pw/findPassword.module.css
@@ -1,7 +1,7 @@
 /* app/find-password/findPassword.module.css */
 .container {
     display: flex;
-    min-height: 100vh;
+    height: calc(100vh - var(--header-height));
     background-color: #fff;
 }
 
