--- a/components/navigation/navigation.module.css
+++ b/components/navigation/navigation.module.css
@@ -1,5 +1,68 @@
-.navigation_container{
+.nav{
     width: 100%;
-    height: 100%;
-    border: 1px solid black;
+    height: 100%; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 100px 20px;
+    border-right: 1px solid #e5e7eb;
 }
+
+
+.mainItemBox{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 16px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    /* color: #4b5563; */
+}
+
+.mainItemBox.active {
+    color: var(--woori-deep-blue); 
+}
+
+.icon {
+    font-size: 1rem;
+    min-width: 20px; /* 아이콘 색상 */
+}
+
+.subMenuBox{
+    font-size: 12px;
+    padding: 5px 16px;
+    display: flex;
+    flex-direction: column;    
+    gap: 5px; 
+}
+
+.subMenuItem{
+    display: flex;
+    justify-content: end;
+    width: 100%;
+}
+.subMenuItemLink:hover{
+    text-decoration: underline;
+    text-underline-offset: 4px; 
+}
+
+   
+.logout {
+    padding: 12px 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #4b5563;
+    cursor: pointer;
+    border-radius: 6px;
+    transition: all 0.2s ease;
+    margin-top: auto; /* 하단에 고정 */
+    border-top:  1px solid #e5e7eb;
+}
+.logout:hover {
+    color: var(--woori-deep-blue);
+}
+
+
+  
