feat: global.css 색 추가

--- a/app/(with-sidebar)/mypage/president-edit/page.module.css
+++ b/app/(with-sidebar)/mypage/president-edit/page.module.css
@@ -1,4 +1,6 @@
 /* ProfileEdit.module.css */
+
+
 .container {
     padding: 20px;
     background-color: #fff;
@@ -61,7 +63,7 @@
   
   .verifyButton {
     padding: 8px 16px;
-    background-color: #40c4ff;
+    background-color: var(--woori-button-hover);
     color: white;
     border: none;
     border-radius: 4px;
