--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
   --woori-light-blue: #38BEEF;
   --woori-deep-blue: #0067AC;
   --sidebar-width: 15%;
+  --woori-button-hover: #a0a0a0;
 }
 
 body {
