--- a/app/(with-sidebar)/mypage/workplace/page.module.css
+++ b/app/(with-sidebar)/mypage/workplace/page.module.css
@@ -39,10 +39,15 @@
   margin-top: 20px;
 }
 
+.bankContainer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .form label {
   font-weight: bold;
   margin-bottom: 8px;
-  font-size: 16px;
 }
 
 .form input {
@@ -50,15 +55,13 @@
   padding: 12px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  font-size: 16px;
 }
 
-.form select {
+.inputGroup div {
   width: 120px;
   padding: 12px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  font-size: 16px;
 }
 
 .inputGroup {
@@ -75,7 +78,6 @@
   border: none;
   cursor: pointer;
   border-radius: 5px;
-  font-size: 16px;
   flex-shrink: 0; /* 버튼의 크기가 줄어들지 않도록 설정 */
 }
 
@@ -85,7 +87,7 @@
 
 .linkGroup {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   margin-top: 10px;
   margin-bottom: 40px;
@@ -114,20 +116,17 @@
   border: 1px solid #ddd;
   padding: 12px 30px;
   cursor: pointer;
-  font-size: 16px;
   color: black;
 }
 
 .confirmButton {
-  background-color: #007bff;
-  color: #fff;
+  background-color: var(--main-woori-blue);
   border: none;
   padding: 12px 30px;
   cursor: pointer;
-  font-size: 16px;
   border-radius: 5px;
 }
 
 .confirmButton:hover {
-  background-color: #0056b3;
+  background-color: var(--woori-light-blue);
 }
