--- a/components/dropdown/business-dropdown.module.css
+++ b/components/dropdown/business-dropdown.module.css
@@ -2,29 +2,45 @@
 .dropdown {
     position: relative;
     display: inline-block;
-    width: 200px;
+    width: 100%;
+    height: 100%;
+    background-color: #f8fafc;
+    text-align: center;
 }
 
 .dropbtn {
     width: 100%;
+    height: 100%;
     padding: 10px 15px;
-    background-color: white;
+    background-color: #f8fafc;
     border: 1px solid #ddd;
     text-align: left;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 600;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: relative;
     border-radius: 8px;
 }
 
 .dropbtn.active {
     border-radius: 8px 8px 0 0;
+    text-align: center;
+}
+.businessName{
+    width: 100%;
+    height: 100%;
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    padding-right: 30px;
 }
 
 .arrow {
-    margin-left: 10px;
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
     font-size: 12px;
     color: #666;
 }
@@ -40,6 +56,7 @@
     z-index: 1000;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     border-radius: 0 0 8px 8px;
+    font-size: 14px;
 }
 
 .dropdownItem {
