--- a/components/header/main-header/main-header.module.css
+++ b/components/header/main-header/main-header.module.css
@@ -34,7 +34,7 @@
 .headerTitle{
     font-size: 20px; 
     font-weight: 600;
-    color: #1f2937;
+    color: var(--main-woori-blue);
     padding-left: 10px;
 }
 .headerMenu{
