--- a/components/navigation/navigation.module.css
+++ b/components/navigation/navigation.module.css
@@ -3,53 +3,64 @@
     height: 100%; 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 100px 20px;
     border-right: 1px solid #e5e7eb;
 }
 
+.topSection{
+    /* padding: 20px; */
+    width: 100%;
+    height: 8.2%;
+    border-bottom: 1px solid #e5e7eb;
+}
+.navigationSection{
+    flex:1;
+}
 
 .mainItemBox{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 12px 16px;
+    padding: 20px 40px;
     font-size: 16px;
     cursor: pointer;
-    transition: all 0.2s ease;
-    /* color: #4b5563; */
 }
-
 .mainItemBox.active {
     color: var(--woori-deep-blue); 
+    background-color: #f5f5f5;
+    font-weight: 600;
+    
 }
 
 .icon {
     font-size: 1rem;
-    min-width: 20px; /* 아이콘 색상 */
+    min-width: 20px; 
+    margin-right: 30px;
+    font-weight: 600;
+
 }
 
 .subMenuBox{
     font-size: 12px;
-    padding: 5px 16px;
+    padding: 8px 20px 8px 90px; 
     display: flex;
     flex-direction: column;    
-    gap: 5px; 
+    gap: 12px; 
+    background-color: #f9fafb;
 }
 
 .subMenuItem{
     display: flex;
-    justify-content: end;
     width: 100%;
+    font-size: 13px;
 }
 .subMenuItemLink:hover{
     text-decoration: underline;
     text-underline-offset: 4px; 
+    color: var(--woori-deep-blue);
 }
 
    
 .logout {
-    padding: 12px 16px;
+    padding: 20px 30px 20px 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,7 +68,7 @@
     cursor: pointer;
     border-radius: 6px;
     transition: all 0.2s ease;
-    margin-top: auto; /* 하단에 고정 */
+    margin-top: auto;
     border-top:  1px solid #e5e7eb;
 }
 .logout:hover {
@@ -66,3 +77,6 @@
 
 
   
+
+
+
