--- a/components/navigation/navigation.module.css
+++ b/components/navigation/navigation.module.css
@@ -40,7 +40,7 @@
 
 .subMenuBox{
     font-size: 12px;
-    padding: 8px 20px 8px 90px; 
+    padding: 8px 20px 8px 80px; 
     display: flex;
     flex-direction: column;    
     gap: 12px; 
@@ -49,6 +49,7 @@
 
 .subMenuItem{
     display: flex;
+    /* justify-content: center; */
     width: 100%;
     font-size: 13px;
 }
