--- a/components/mypage/content/ProfileDetail.module.css
+++ b/components/mypage/content/ProfileDetail.module.css
@@ -1,4 +1,4 @@
-/* PageProfileDetail.module.css */
+/* ProfileDetail.module.css */
 .container {
     width: 100%;
 }
@@ -20,54 +20,6 @@
 
 .otherComponent {
     margin: 2rem 0;
-}
-
-.workplaceTitle {
-    font-size: 1.125rem;
-    font-weight: 500;
-    margin-bottom: 1rem;
-}
-
-.table {
-    width: 100%;
-}
-
-.tableHeader {
-    color: #93c5fd;  /* blue-300 */
-}
-
-.headerRow, .bodyRow {
-    border-bottom: 1px solid #e5e7eb;  /* gray-200 */
-}
-
-.headerCell, .cell {
-    padding: 0.75rem;
-    text-align: left;
-}
-
-.centerAlign {
-    text-align: center;
-}
-
-.rightAlign {
-    text-align: right;
-}
-
-.editButton, .deleteButton {
-    color: #2563eb;  /* blue-600 */
-    border: 1px solid #2563eb;
-    padding: 0.25rem 0.75rem;
-    border-radius: 0.375rem;
-    font-size: 0.875rem;
-    transition: background-color 0.2s;
-}
-
-.editButton {
-    margin-right: 0.5rem;
-}
-
-.editButton:hover, .deleteButton:hover {
-    background-color: #eff6ff;  /* blue-50 */
 }
 
 .addButtonContainer {
