--- a/components/navigation/navigation.module.css
+++ b/components/navigation/navigation.module.css
@@ -19,7 +19,7 @@
 .mainItemBox{
     display: flex;
     align-items: center;
-    padding: 20px 40px;
+    padding: 20px 60px;
     font-size: 16px;
     cursor: pointer;
 }
@@ -33,23 +33,24 @@
 .icon {
     font-size: 1rem;
     min-width: 20px; 
-    margin-right: 30px;
+    margin-right: 35px;
     font-weight: 600;
 
 }
 
 .subMenuBox{
     font-size: 12px;
-    padding: 8px 20px 8px 80px; 
+    /* padding: 8px 20px 8px 80px;  */
+    padding:8px 0;
     display: flex;
     flex-direction: column;    
-    gap: 12px; 
+    gap: 20px; 
     background-color: #f9fafb;
 }
 
 .subMenuItem{
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     width: 100%;
     font-size: 13px;
 }
@@ -61,7 +62,7 @@
 
    
 .logout {
-    padding: 20px 30px 20px 40px;
+    padding: 20px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -76,8 +77,59 @@
     color: var(--woori-deep-blue);
 }
 
+/* 반응형 */
+@media (max-width: 1670px) {
+    /* 화면 크기가 1670px 이하일 때 */
+    .mainItemBox {
+        padding: 1rem 2rem; /* 좌우 여백을 줄임 */
+        font-size: 0.9rem;  /* 폰트 크기 줄임 */
+    }
+
+    .icon {
+        margin-right: 1.5rem; /* 아이콘의 오른쪽 여백 줄임 */
+    }
+
+    .subMenuBox {
+        gap: 0.8rem; /* 서브 메뉴 간격 줄임 */
+    }
+    .topSection{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 1200px) {
+    /* 1200px 이하일 때 */
+    .mainItemBox {
+        padding: 0.8rem 1.5rem; /* 여백을 더 줄임 */
+        font-size: 0.875rem;
+    }
+
+    .icon {
+        margin-right: 1rem; /* 아이콘 여백 더 줄임 */
+    }
+
+    .subMenuBox {
+        gap: 0.6rem;
+    }
+    
+}
+
+@media (max-width: 992px) {
+    /* 992px 이하일 때 (태블릿 및 작은 화면) */
+    .nav {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .navigationSection {
+        display: none; /* 네비게이션 메뉴 숨기기 */
+    }
+
+    .logout {
+        padding: 1rem;
+    }
 
   
-
+}
 
 
