feat: 직원 추가 유효성 검사

--- a/app/(with-sidebar)/employee/management/employee-add/page.module.css
+++ b/app/(with-sidebar)/employee/management/employee-add/page.module.css
@@ -120,5 +120,12 @@
     font-weight: 600;
     color: #333;
     margin-bottom: 30px;
-    text-align: center; /* 중앙 정렬 추가 */
+    text-align: center;
+}
+
+.error {
+    color: red;
+    font-size: 0.7rem;
+    margin-top: 5px;
+    font-weight: bold;
 }
