feat: 삭제 확인 모달창 구현

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,8 @@
   --main-woori-blue: #0180CD;
   --woori-light-blue: #38BEEF;
   --woori-deep-blue: #0067AC;
+  --gray: #787878;
+  --red: #E3262F;
   --sidebar-width: 16%;
 }
 
