--- a/components/modal/delete-confirm.js/delete-confirm.module.css
+++ b/components/modal/delete-confirm.js/delete-confirm.module.css
@@ -12,7 +12,7 @@
   }
   
   .modal {
-    background-color: #fff;
+    background-color: var(--background);
     padding: 30px;
     border-radius: 10px;
     max-width: 600px;
