--- a/components/selector/selector.module.css
+++ b/components/selector/selector.module.css
@@ -5,11 +5,15 @@
 }
 
 .navButton {
-    background-color: transparent;
+    width: 20px;
+    height: 20px;
+    background-color: #e0e0e0;
     border: none;
+    border-radius: 3px;
     cursor: pointer;
-    padding: 5px;
     transition: transform 0.2s ease-in-out;
+    font-size: 10px;
+    color: var(--gray);
 }
 
 .navButton:hover {
