--- a/app/(with-sidebar)/payroll-auto-transfer/records/page.module.css
+++ b/app/(with-sidebar)/payroll-auto-transfer/records/page.module.css
@@ -1,4 +1,18 @@
-.search {
+.container {
+    max-width: 1000px;
+    margin: 20px auto;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.filtering {
     display: flex;
     gap: 10px;
 }
