feat: 테이블 컴포넌트 데이터가 존재하지 않는 경우 구현

--- a/components/table/DefaultTable.module.css
+++ b/components/table/DefaultTable.module.css
@@ -36,3 +36,13 @@
     padding: 10px;
     text-align: center;
 }
+
+.noDataContainer {
+    text-align: center;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+.noDataText {
+    color: var(--gray);
+}
