--- a/app/(with-sidebar)/transactions/analytics/page.module.css
+++ b/app/(with-sidebar)/transactions/analytics/page.module.css
@@ -1,5 +1,20 @@
 .container {
-    padding: 20px;
-    background-color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+}
+  
+.chartContainer {
+    display: flex;
+    gap: 4rem;
+    margin-top: 2rem;
 }
 
+.reportsContainer {
+    display: flex;
+    justify-content: center;
+    gap: 4rem;
+    margin-top: 20px;
+}
