feat:직원 스케줄 조회 캘린더 레이아웃 작업 구현 중

--- a/app/(with-sidebar)/layout.module.css
+++ b/app/(with-sidebar)/layout.module.css
@@ -16,6 +16,7 @@
     z-index: 1000;
     width: 100%;
     height: var(--header-height);
+    background-color: var(--background);
 }
 .sidebar{
     grid-area: sidebar;
