fix: 캘린더 기능 구현 완료, 추후 직원 등록 모달창과 연결 예정\

--- a/components/header/main-header/main-header.module.css
+++ b/components/header/main-header/main-header.module.css
@@ -5,6 +5,8 @@
     width: 100%;
     height: var(--header-height);
     border-bottom: 1px solid #e5e7eb;
+    z-index: 10000;
+    background: white;
 }
 
 .header_left{
