--- a/app/(with-sidebar)/payroll-auto-transfer/records/page.module.css
+++ b/app/(with-sidebar)/payroll-auto-transfer/records/page.module.css
@@ -1,9 +1,13 @@
 .container {
-    max-width: 1000px;
+    /* max-width: 1000px; */
     margin: 20px auto;
-    padding: 30px;
+    padding: 50px 70px;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
+    border: 1px solid #e5e7eb;
+    border-radius: 20px;
+    background-color: rgb(255, 255, 255, 0.6);  
 }
 
 .header {
