--- a/components/input/account-input.module.css
+++ b/components/input/account-input.module.css
@@ -2,6 +2,13 @@
   width: 100%;
   max-width: 48rem;
  }
+
+ .error {
+  color: red;
+  font-size: 0.7rem;
+  margin-top: 5px;
+  font-weight: bold;
+}
  
  .title {
   font-size: 1.125rem;
