--- a/app/(with-sidebar)/payroll-auto-transfer/records/page.module.css
+++ b/app/(with-sidebar)/payroll-auto-transfer/records/page.module.css
@@ -20,3 +20,11 @@
     display: flex;
     gap: 10px;
 }
+
+.bankIcon {
+    width: 20px; /* SVG 아이콘의 너비 */
+    height: 20px; /* SVG 아이콘의 높이 */
+    display: inline-block; /* 계좌번호와 같은 줄에 오게 설정 */
+    margin-right: 3px; /* 계좌번호와 아이콘 사이에 간격 추가 */
+    vertical-align: middle; /* 텍스트와 수직으로 정렬 */
+}
