--- a/components/header/main-header/main-header.module.css
+++ b/components/header/main-header/main-header.module.css
@@ -57,6 +57,14 @@
     background-color: #e0e0e0;
 }
 
+.bellContainer {
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .bell_icon {
     background-color: #f0f0f0; /* 배경색 설정 */
     border-radius: 50%; /* 원형으로 만들기 */
@@ -69,7 +77,24 @@
     color: #0180CD; /* 아이콘 기본 색상 */
 }
 
-
 .bell_icon:hover {
     color: #38BEEF;
+}
+
+.notificationCnt {
+    position: absolute;
+    top: 5px; /* 아이콘 위의 위치 조정 */
+    right: 5px; /* 아이콘 오른쪽의 위치 조정 */
+    transform: translate(50%, -50%); /* 위치 조정 */
+    background: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 20px;
+    height: 20px;
 }
