--- a/components/modal/alarm-modal/alarm-modal.module.css
+++ b/components/modal/alarm-modal/alarm-modal.module.css
@@ -4,7 +4,7 @@
     right: 30px;
     width: 300px;
     height: 250px;
-    background: white;
+    background: #f5f5f5;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   }
