--- a/components/mypage/content/ProfileDetail.module.css
+++ b/components/mypage/content/ProfileDetail.module.css
@@ -46,3 +46,15 @@
 .addButtonText {
     font-size: 1.125rem;
 }
+
+.accountContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.bankLogo {
+    width: 20px;
+    height: 20px;
+}
