--- a/components/calendar/calendar.css
+++ b/components/calendar/calendar.css
@@ -1,5 +1,5 @@
 .fc { /* FullCalendar의 root element */
-    max-width: 100%;
+    /* max-width: 100%; */
     padding: 30px 50px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
