feat: 유효성 검사 구현중

--- a/components/modal/workplace-registration.js/workplace-registration.module.css
+++ b/components/modal/workplace-registration.js/workplace-registration.module.css
@@ -109,3 +109,10 @@
   color: #2d3748;
   margin-bottom: 20px;
 }
+
+.error {
+  color: red;
+  font-size: 0.7rem;
+  margin-top: 5px;
+  font-weight: bold;
+}
