fix:guest-header 반응형으로 변경

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --header-height:80px;
   --header-padding: 20px 100px;
+  --header-background: white;
   --main-woori-blue: #0180CD;
   --woori-light-blue: #38BEEF;
   --woori-deep-blue: #0067AC;
